--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   permission_handler: ^11.3.1
   flutter_colorpicker: ^1.0.0
   audioplayers: ^6.1.0
+  lottie: ^3.1.3
 
 dev_dependencies:
   flutter_test:
@@ -79,6 +80,8 @@ flutter:
     - assets/images/unir.jpeg
     - assets/images/repetir_vocal.jpg
     - assets/audio/1audio.mp3
+    - assets/animations/applause.json
+    - assets/animations/error.json
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
