--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,12 @@ dependencies:
   flutter_colorpicker: ^1.0.0
   audioplayers: ^6.1.0
   lottie: ^3.1.3
+  percent_indicator: ^4.2.4
+  provider: ^6.1.2
+  
+
+
+
 
 dev_dependencies:
   flutter_test:
@@ -83,7 +89,6 @@ flutter:
     - assets/animations/applause.json
     - assets/animations/error.json
   #   - images/a_dot_ham.jpeg
-
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
 
